fix: color contrast

--- a/apps/site/components/Common/Searchbox/Footer/index.module.css
+++ b/apps/site/components/Common/Searchbox/Footer/index.module.css
@@ -35,7 +35,8 @@
     items-center
     gap-2
     text-xs
-    text-neutral-700;
+    text-neutral-800
+    dark:text-neutral-600;
 }
 
 .shortcutKey {
